crates/nirvash-macros/tests/fixtures/code_tests_legacy_fresh.stderr
error: fresh = ... is no longer supported; use binding = ... and implement fresh_runtime() on ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_fresh.rs:118:68
    |
118 | #[code_tests(spec = Spec, binding = Binding, init = initial_state, fresh = tests::fresh_driver)]
    |                                                                    ^^^^^
